--- a/Agrine.Cmd/Agrine.Cmd.vcxproj
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj
@@ -136,6 +136,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="AgrineCmdAPI.h" />
+    <ClInclude Include="CmdExecutor.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
