--- a/Agrine.Cmd/Agrine.Cmd.vcxproj.filters
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="CmdExecutor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PowerShellExecutor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
