--- a/Agrine.Cmd/Agrine.Cmd.vcxproj
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj
@@ -142,6 +142,7 @@
     <ClInclude Include="PowerShellExecutor.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="AgrineCmdAPI.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
