- Add CmdExecutor Cpp File

--- a/Agrine.Cmd/Agrine.Cmd.vcxproj.filters
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="AgrineCmdAPI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CmdExecutor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
