--- a/Agrine.Cmd/Agrine.Cmd.vcxproj
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj
@@ -143,6 +143,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AgrineCmdAPI.cpp" />
+    <ClCompile Include="CmdExecutor.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
