--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -138,6 +138,7 @@
     <ClInclude Include="Algebra.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Geometry.h" />
     <ClInclude Include="MathCore.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
