--- a/Agrine.Math/Agrine.Math.vcxproj.filters
+++ b/Agrine.Math/Agrine.Math.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="Algebra.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Geometry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
