--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -139,6 +139,7 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="LinearAlgebra.h" />
     <ClInclude Include="MathCore.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
