--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="MathCore.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Statistics.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp" />
