--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Algebra.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="Linalg.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
