- Add CmdExecutor.h Header File To Agrine.Cmd

--- a/Agrine.Cmd/Agrine.Cmd.vcxproj
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj
@@ -120,6 +120,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Agrine.Cmd.h" />
+    <ClInclude Include="CmdExecutor.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
   </ItemGroup>
