--- a/Agrine.Cmd/Agrine.Cmd.vcxproj.filters
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CmdExecutor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agrine.Cmd.cpp">
