--- a/Agrine.Cmd/Agrine.Cmd.vcxproj
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="Agrine.Cmd.h" />
     <ClInclude Include="CmdExecutor.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="PowerShellExecutor.h" />
     <ClInclude Include="Resource.h" />
   </ItemGroup>
   <ItemGroup>
