- Add CmdExecutor.cpp File To Agrine.Cmd

--- a/Agrine.Cmd/Agrine.Cmd.vcxproj.filters
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CmdExecutor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
