--- a/Agrine.Cmd/Agrine.Cmd.vcxproj
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj
@@ -128,6 +128,7 @@
   <ItemGroup>
     <ClCompile Include="Agrine.Cmd.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="CmdExecutor.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
