- Add PowerShellExecutor.Cpp File To Agrine.Cmd

--- a/Agrine.Cmd/Agrine.Cmd.vcxproj.filters
+++ b/Agrine.Cmd/Agrine.Cmd.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClCompile Include="CmdExecutor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PowerShellExecutor.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
