--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -120,6 +120,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Agrine.Math.h" />
+    <ClInclude Include="Constants.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Types.h" />
