--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -121,6 +121,7 @@
   <ItemGroup>
     <ClInclude Include="Agrine.Math.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="Exceptions.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Types.h" />
