- Add Algebra Folder To Header Files Folder

--- a/Agrine.Math/Agrine.Math.vcxproj.filters
+++ b/Agrine.Math/Agrine.Math.vcxproj.filters
@@ -16,6 +16,9 @@
     <Filter Include="Header Files\Core">
       <UniqueIdentifier>{e6a1b8b6-13c6-4a5b-afa6-541888dd1c27}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Algebra">
+      <UniqueIdentifier>{2d008932-3cfa-4cec-9b0f-60d6665a4d68}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Agrine.Math.h">
