--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -122,6 +122,7 @@
     <ClInclude Include="Agrine.Math.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Exceptions.h" />
+    <ClInclude Include="Matrix.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Types.h" />
