- Add Polynomial.h Header File To Algebra Folder

--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="Exceptions.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Polynomial.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Utils.h" />
