- Add Integration.h Header File To Calculus Folder

--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -123,6 +123,7 @@
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Differentiation.h" />
     <ClInclude Include="Exceptions.h" />
+    <ClInclude Include="Integration.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Polynomial.h" />
