--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Polynomial.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Series.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Vector.h" />
