--- a/Agrine.Math/Agrine.Math.vcxproj.filters
+++ b/Agrine.Math/Agrine.Math.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClInclude Include="DiffEq.h">
       <Filter>Header Files\Calculus</Filter>
     </ClInclude>
+    <ClInclude Include="Euclidean.h">
+      <Filter>Header Files\Geometry</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agrine.Math.cpp">
