- Add Analytic.h Header File To Geometry Folder

--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -120,6 +120,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Agrine.Math.h" />
+    <ClInclude Include="Analytic.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="DiffEq.h" />
     <ClInclude Include="Differentiation.h" />
