--- a/Agrine.Math/Agrine.Math.vcxproj.filters
+++ b/Agrine.Math/Agrine.Math.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="Analytic.h">
       <Filter>Header Files\Geometry</Filter>
     </ClInclude>
+    <ClInclude Include="Computational.h">
+      <Filter>Header Files\Geometry</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agrine.Math.cpp">
