--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Polynomial.h" />
+    <ClInclude Include="Randgen.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="Series.h" />
     <ClInclude Include="Topology.h" />
