--- a/Agrine.Math/Agrine.Math.vcxproj.filters
+++ b/Agrine.Math/Agrine.Math.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="Randgen.h">
       <Filter>Header Files\Probability</Filter>
     </ClInclude>
+    <ClInclude Include="Distributions.h">
+      <Filter>Header Files\Probability</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agrine.Math.cpp">
