--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="Distributions.h" />
     <ClInclude Include="Euclidean.h" />
     <ClInclude Include="Exceptions.h" />
+    <ClInclude Include="Fourier.h" />
     <ClInclude Include="Integration.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="pch.h" />
