- Add Optimization.h Header File To Advanced Folder

--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="Laplace.h" />
     <ClInclude Include="Matrix.h" />
     <ClInclude Include="Numerics.h" />
+    <ClInclude Include="Optimization.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Polynomial.h" />
     <ClInclude Include="Randgen.h" />
