--- a/Agrine.Math/Agrine.Math.vcxproj.filters
+++ b/Agrine.Math/Agrine.Math.vcxproj.filters
@@ -40,6 +40,9 @@
     <Filter Include="Source Files\Probability">
       <UniqueIdentifier>{6a6f1b33-47f7-4add-9538-0d9bace26c31}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Advanced">
+      <UniqueIdentifier>{10584255-5606-480e-af14-1da54af80e6e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Agrine.Math.h">
