--- a/Agrine.Math/Agrine.Math.vcxproj.filters
+++ b/Agrine.Math/Agrine.Math.vcxproj.filters
@@ -143,6 +143,9 @@
     <ClCompile Include="Vector.cpp">
       <Filter>Source Files\Algebra</Filter>
     </ClCompile>
+    <ClCompile Include="Polynomial.cpp">
+      <Filter>Source Files\Algebra</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
