--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Agrine.Math.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="DiffEq.cpp" />
+    <ClCompile Include="Differentiation.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
