- Add Series.cpp File To Calculus Folder

--- a/Agrine.Math/Agrine.Math.vcxproj.filters
+++ b/Agrine.Math/Agrine.Math.vcxproj.filters
@@ -155,6 +155,9 @@
     <ClCompile Include="Integration.cpp">
       <Filter>Source Files\Calculus</Filter>
     </ClCompile>
+    <ClCompile Include="Series.cpp">
+      <Filter>Source Files\Calculus</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
