--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -160,6 +160,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Polynomial.cpp" />
+    <ClCompile Include="Series.cpp" />
     <ClCompile Include="Vector.cpp" />
   </ItemGroup>
   <ItemGroup>
