--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Complex.cpp" />
     <ClCompile Include="DiffEq.cpp" />
     <ClCompile Include="Differentiation.cpp" />
+    <ClCompile Include="Fourier.cpp" />
     <ClCompile Include="Integration.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="pch.cpp">
