--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Differentiation.cpp" />
     <ClCompile Include="Fourier.cpp" />
     <ClCompile Include="Integration.cpp" />
+    <ClCompile Include="Laplace.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
