--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="Laplace.cpp" />
     <ClCompile Include="Matrix.cpp" />
     <ClCompile Include="Numerics.cpp" />
+    <ClCompile Include="Optimization.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
