- Add Analytic.cpp File To Advanced Folder

--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -148,6 +148,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agrine.Math.cpp" />
+    <ClCompile Include="Analytic.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
     <ClCompile Include="Complex.cpp" />
     <ClCompile Include="DiffEq.cpp" />
