--- a/Agrine.Math/Agrine.Math.vcxproj
+++ b/Agrine.Math/Agrine.Math.vcxproj
@@ -169,6 +169,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Polynomial.cpp" />
+    <ClCompile Include="Randgen.cpp" />
     <ClCompile Include="Series.cpp" />
     <ClCompile Include="Topology.cpp" />
     <ClCompile Include="Vector.cpp" />
