--- a/Agrine.Math/Agrine.Math.vcxproj.filters
+++ b/Agrine.Math/Agrine.Math.vcxproj.filters
@@ -188,6 +188,9 @@
     <ClCompile Include="Distributions.cpp">
       <Filter>Source Files\Probability</Filter>
     </ClCompile>
+    <ClCompile Include="Randgen.cpp">
+      <Filter>Source Files\Probability</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="app.rc">
