- Add Information.h File To System Folder

--- a/Agrine.OS/Agrine.OS.vcxproj
+++ b/Agrine.OS/Agrine.OS.vcxproj
@@ -120,6 +120,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Agrine.OS.h" />
+    <ClInclude Include="Information.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
   </ItemGroup>
