--- a/Agrine.OS/Agrine.OS.vcxproj.filters
+++ b/Agrine.OS/Agrine.OS.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Information.h">
+      <Filter>Header Files\System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agrine.OS.cpp">
