--- a/Agrine.OS/Agrine.OS.vcxproj.filters
+++ b/Agrine.OS/Agrine.OS.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Information.h">
       <Filter>Header Files\System</Filter>
     </ClInclude>
+    <ClInclude Include="Time.h">
+      <Filter>Header Files\System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agrine.OS.cpp">
