- Add Power.h To System Folder

--- a/Agrine.OS/Agrine.OS.vcxproj.filters
+++ b/Agrine.OS/Agrine.OS.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Time.h">
       <Filter>Header Files\System</Filter>
     </ClInclude>
+    <ClInclude Include="Power.h">
+      <Filter>Header Files\System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agrine.OS.cpp">
