--- a/Agrine.OS/Agrine.OS.vcxproj.filters
+++ b/Agrine.OS/Agrine.OS.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="Header Files\Registry">
       <UniqueIdentifier>{ed82f4e2-46a3-40cc-8d4f-e5541d327308}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Network">
+      <UniqueIdentifier>{e786eed3-c330-4798-9473-7262119386b0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Agrine.OS.h">
