--- a/Agrine.OS/Agrine.OS.vcxproj.filters
+++ b/Agrine.OS/Agrine.OS.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="Power.h">
       <Filter>Header Files\System</Filter>
     </ClInclude>
+    <ClInclude Include="Personalization.h">
+      <Filter>Header Files\System</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Agrine.OS.cpp">
