--- a/Agrine.OS/Agrine.OS.vcxproj.filters
+++ b/Agrine.OS/Agrine.OS.vcxproj.filters
@@ -48,7 +48,7 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Information.h">
+    <ClInclude Include="About.h">
       <Filter>Header Files\System</Filter>
     </ClInclude>
     <ClInclude Include="Time.h">
